# MIYO-kmp

./: .gitignore  AGENTS.md  CNAME  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  report_bug.yml  request_feature.yml
.github/model-assets/refinement/: realesrgan-x4plus-anime-6b.json  realesrgan-x4plus.json  remacri-x4.json  sharp-x4v1.json  ultrasharp-x4.json  webtoon-x4v1.json
.github/workflows/: android-instrumented-tests.yml  ci.yml  codeql.yml  dependency-review.yml  issue_moderator.yml  kmp-ci.yml  release-dry-run.yml  secret-scan.yml  trigger-site-deploy.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/libs/: keiyoushi-extensions-lib.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jpeg-bridge.cpp  jpeg-bridge.h  jpeg-stubs.cpp  native-init.cpp  native_image_enhancer.cpp  native_image_probe.cpp  native_zip_writer.cpp  yuv-converter.cpp
docs/: CLAUDE_KMP_TASK.md  KMPIFY_ADAPTATION.md  KMP_ANDROID_ONLY.txt  KMP_CI.md  KMP_FINISH_PLAN.md  KMP_MASS_MIGRATION.md  KMP_MIGRATE_INVENTORY.json  KMP_MIGRATION_STATUS.md  KMP_PUSH_NOTES.md  KMP_REWRITE_CANDIDATES.txt
gradle/: libs.versions.toml
iosApp/: README.md
iosApp/Miyo/: ContentView.swift  Info.plist  MiyoApp.swift
iosApp/Miyo.xcodeproj/: project.pbxproj
shared/: build.gradle.kts  consumer-rules.pro
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/cpp/: CMakeLists.txt  (+1 more)
tools/: captcha_probe.py  miyo_kmpify.py
(+1116 files in other folders)
